// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Thumbnail /> by default should render the right structure 1`] = `
<Thumbnail
  className="🚥"
  hasMargin={false}
  hasRoundedCorners={false}
  imageUrl="www.⚡️.net"
  isCircular={false}
  isSquare={false}
  label={null}
  size={null}
>
  <div
    className="ui thumbnail 🚥"
  >
    <withLazyLoad(ResponsiveImage)
      hasRoundedCorners={false}
      imageUrl="www.⚡️.net"
      isCircular={false}
      isFluid={true}
      isLazyLoaded={true}
      isSquare={false}
    >
      <LazyLoader
        componentProps={
          Object {
            "alternativeText": undefined,
            "hasRoundedCorners": false,
            "isCircular": false,
            "isFluid": true,
            "isLazyLoaded": true,
            "isSquare": false,
            "placeholderImageUrl": undefined,
            "sizes": undefined,
          }
        }
        lazyProps={
          Object {
            "imageUrl": "www.⚡️.net",
            "srcSet": undefined,
          }
        }
      >
        <div />
        <ResponsiveImage
          alternativeText="Image Widget"
          hasRoundedCorners={false}
          imageHeight={null}
          imageTitle="Image Title"
          imageUrl=""
          imageWidth={null}
          isAvatar={false}
          isCircular={false}
          isFluid={true}
          isLazyLoaded={true}
          isSquare={false}
          label={null}
          sizes={null}
          srcSet={null}
        >
          <figure
            className="responsive-image is-fluid"
          />
        </ResponsiveImage>
        <div />
      </LazyLoader>
    </withLazyLoad(ResponsiveImage)>
  </div>
</Thumbnail>
`;

exports[`<Thumbnail /> if \`props.isCircular\` is true should render the right structure 1`] = `
<Thumbnail
  className="🚥"
  hasMargin={false}
  hasRoundedCorners={false}
  imageUrl="www.⚡️.net"
  isCircular={true}
  isSquare={false}
  label={null}
  size={null}
>
  <div
    className="ui thumbnail 🚥 is-circular"
  >
    <withLazyLoad(ResponsiveImage)
      hasRoundedCorners={false}
      imageUrl="www.⚡️.net"
      isCircular={true}
      isFluid={true}
      isLazyLoaded={true}
      isSquare={false}
    >
      <LazyLoader
        componentProps={
          Object {
            "alternativeText": undefined,
            "hasRoundedCorners": false,
            "isCircular": true,
            "isFluid": true,
            "isLazyLoaded": true,
            "isSquare": false,
            "placeholderImageUrl": undefined,
            "sizes": undefined,
          }
        }
        lazyProps={
          Object {
            "imageUrl": "www.⚡️.net",
            "srcSet": undefined,
          }
        }
      >
        <div />
        <ResponsiveImage
          alternativeText="Image Widget"
          hasRoundedCorners={false}
          imageHeight={null}
          imageTitle="Image Title"
          imageUrl=""
          imageWidth={null}
          isAvatar={false}
          isCircular={true}
          isFluid={true}
          isLazyLoaded={true}
          isSquare={false}
          label={null}
          sizes={null}
          srcSet={null}
        >
          <figure
            className="responsive-image is-fluid is-circular"
          />
        </ResponsiveImage>
        <div />
      </LazyLoader>
    </withLazyLoad(ResponsiveImage)>
  </div>
</Thumbnail>
`;

exports[`<Thumbnail /> if \`props.isSquare\` is true should render the right structure 1`] = `
<Thumbnail
  className="🚥"
  hasMargin={false}
  hasRoundedCorners={false}
  imageUrl="www.⚡️.net"
  isCircular={false}
  isSquare={true}
  label={null}
  size={null}
>
  <div
    className="ui thumbnail 🚥 is-square"
  >
    <withLazyLoad(ResponsiveImage)
      hasRoundedCorners={false}
      imageUrl="www.⚡️.net"
      isCircular={false}
      isFluid={false}
      isLazyLoaded={true}
      isSquare={true}
    >
      <LazyLoader
        componentProps={
          Object {
            "alternativeText": undefined,
            "hasRoundedCorners": false,
            "isCircular": false,
            "isFluid": false,
            "isLazyLoaded": true,
            "isSquare": true,
            "placeholderImageUrl": undefined,
            "sizes": undefined,
          }
        }
        lazyProps={
          Object {
            "imageUrl": "www.⚡️.net",
            "srcSet": undefined,
          }
        }
      >
        <div />
        <ResponsiveImage
          alternativeText="Image Widget"
          hasRoundedCorners={false}
          imageHeight={null}
          imageTitle="Image Title"
          imageUrl=""
          imageWidth={null}
          isAvatar={false}
          isCircular={false}
          isFluid={false}
          isLazyLoaded={true}
          isSquare={true}
          label={null}
          sizes={null}
          srcSet={null}
        >
          <figure
            className="responsive-image"
          />
        </ResponsiveImage>
        <div />
      </LazyLoader>
    </withLazyLoad(ResponsiveImage)>
  </div>
</Thumbnail>
`;

exports[`<Thumbnail /> if \`props.size\` is supplied should render the right structure 1`] = `
<Thumbnail
  className="🚥"
  hasMargin={false}
  hasRoundedCorners={false}
  imageUrl="www.⚡️.net"
  isCircular={false}
  isSquare={false}
  label={null}
  size="small"
>
  <div
    className="ui thumbnail small 🚥"
  >
    <withLazyLoad(ResponsiveImage)
      hasRoundedCorners={false}
      imageUrl="www.⚡️.net"
      isCircular={false}
      isFluid={true}
      isLazyLoaded={true}
      isSquare={false}
    >
      <LazyLoader
        componentProps={
          Object {
            "alternativeText": undefined,
            "hasRoundedCorners": false,
            "isCircular": false,
            "isFluid": true,
            "isLazyLoaded": true,
            "isSquare": false,
            "placeholderImageUrl": undefined,
            "sizes": undefined,
          }
        }
        lazyProps={
          Object {
            "imageUrl": "www.⚡️.net",
            "srcSet": undefined,
          }
        }
      >
        <div />
        <ResponsiveImage
          alternativeText="Image Widget"
          hasRoundedCorners={false}
          imageHeight={null}
          imageTitle="Image Title"
          imageUrl=""
          imageWidth={null}
          isAvatar={false}
          isCircular={false}
          isFluid={true}
          isLazyLoaded={true}
          isSquare={false}
          label={null}
          sizes={null}
          srcSet={null}
        >
          <figure
            className="responsive-image is-fluid"
          />
        </ResponsiveImage>
        <div />
      </LazyLoader>
    </withLazyLoad(ResponsiveImage)>
  </div>
</Thumbnail>
`;
